{
  "version": 4,
  "terraform_version": "0.14.7",
  "serial": 426,
  "lineage": "561ca91a-1dfd-0bd6-1946-e3425ddbf19e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "associate_with_private_ip": "10.0.0.101",
            "association_id": "eipassoc-0a6c01bd5d38b9f83",
            "domain": "vpc",
            "id": "eipalloc-06403759c43e03a55",
            "instance": "i-0a554cbb6c2a92fdc",
            "network_border_group": "us-east-1",
            "network_interface": "eni-07c50502fbbfdcc36",
            "private_dns": "ip-10-0-0-101.ec2.internal",
            "private_ip": "10.0.0.101",
            "public_dns": "ec2-52-205-88-205.compute-1.amazonaws.com",
            "public_ip": "52.205.88.205",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "Advarra-Demo"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.main",
            "aws_internet_gateway.main",
            "aws_network_interface.main",
            "aws_security_group.main",
            "aws_subnet.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0533f2ba8a1995cf9",
            "arn": "arn:aws:ec2:us-east-1:975300453774:instance/i-0a554cbb6c2a92fdc",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a554cbb6c2a92fdc",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "us-east-1-win",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-07c50502fbbfdcc36"
              }
            ],
            "primary_network_interface_id": "eni-07c50502fbbfdcc36",
            "private_dns": "ip-10-0-0-101.ec2.internal",
            "private_ip": "10.0.0.101",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0cc2794881a815534",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02e9ba0e133752114",
            "tags": {
              "Name": "Advarra-Demo"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0f62a0ab01cb371f8"
            ]
          },
          "dependencies": [
            "aws_network_interface.main",
            "aws_security_group.main",
            "aws_subnet.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975300453774:internet-gateway/igw-077e0b920437120c2",
            "id": "igw-077e0b920437120c2",
            "owner_id": "975300453774",
            "tags": {
              "Name": "Advarra-Demo"
            },
            "vpc_id": "vpc-0f74240d7811a44dd"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "eni-07c50502fbbfdcc36",
            "ipv6_address_count": 0,
            "mac_address": "0e:85:c1:69:87:57",
            "private_ip": "10.0.0.101",
            "private_ips": [
              "10.0.0.101"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-0f62a0ab01cb371f8"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-02e9ba0e133752114",
            "tags": {
              "Name": "Advarra-Demo"
            }
          },
          "dependencies": [
            "aws_security_group.main",
            "aws_subnet.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0f4081288a40d5fbb",
            "owner_id": "975300453774",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-077e0b920437120c2",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Advarra-Demo"
            },
            "vpc_id": "vpc-0f74240d7811a44dd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08cd02ef23577978f",
            "route_table_id": "rtb-0f4081288a40d5fbb",
            "subnet_id": "subnet-02e9ba0e133752114"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.main",
            "aws_subnet.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975300453774:security-group/sg-0f62a0ab01cb371f8",
            "description": "Allow SSH, HTTPS and HTTP inbound traffic.",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f62a0ab01cb371f8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Security-Group",
            "name_prefix": "",
            "owner_id": "975300453774",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Advarra-Demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f74240d7811a44dd"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975300453774:subnet/subnet-02e9ba0e133752114",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-02e9ba0e133752114",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "975300453774",
            "tags": {
              "Name": "Advarra-Demo"
            },
            "tags_all": {
              "Name": "Advarra-Demo"
            },
            "vpc_id": "vpc-0f74240d7811a44dd"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:975300453774:vpc/vpc-0f74240d7811a44dd",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-005b934d4f78d2f20",
            "default_route_table_id": "rtb-04eb32a123a40dca2",
            "default_security_group_id": "sg-0bbbb5be1a45e9741",
            "dhcp_options_id": "dopt-0e25bd74",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0f74240d7811a44dd",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-04eb32a123a40dca2",
            "owner_id": "975300453774",
            "tags": {
              "Name": "Advarra-Demo"
            },
            "tags_all": {
              "Name": "Advarra-Demo"
            }
          }
        }
      ]
    }
  ]
}